// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoResultsDisplay should render component 1`] = `
<div>
  <div
    class="no-results-root flex-grow-1"
  >
    <div
      class="no-results-content"
    >
      <div
        class="h4 no-results-title"
      >
        No items were found.
      </div>
    </div>
  </div>
</div>
`;

exports[`NoResultsDisplay should render component with icon 1`] = `
<div>
  <div
    class="no-results-root flex-grow-1"
  >
    <div
      class="no-results-content"
    >
      <div
        class="no-results-icon no-results-icon-border"
      >
        <svg
          class="lexicon-icon lexicon-icon-home icon-root icon-size-xxxl"
          role="presentation"
        >
          <use
            href="#home"
          />
        </svg>
      </div>
      <div
        class="h4 no-results-title"
      >
        No items were found.
      </div>
    </div>
  </div>
</div>
`;
